[package]
name = "limbo"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
rapier2d = { version = "0.18.0", features = ["enhanced-determinism"] }
nalgebra = { version = "0.32.3", features = ["convert-glam024"] }
sefirot = { path = "../sefirot/sefirot", features = ["bevy"] }
sefirot_grid = { path = "../sefirot/sefirot_grid" }
bevy_sefirot = { path = "../sefirot/bevy_sefirot", features = ["display"] }
id_newtype = { path = "../sefirot/id_newtype" }
morton = "0.3.0"

[dependencies.luisa_compute]
git = "https://github.com/iMplode-nZ/luisa-compute-rs"
branch = "main"
features = ["nalgebra", "glam"]

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = ["bevy_winit", "x11"]

[features]
default = ["debug"]
debug = ["bevy/dynamic_linking", "sefirot/debug", "bevy_sefirot/debug"]

[profile.dev.package.backtrace]
opt-level = 3
