[package]
name = "limbo"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
rapier2d = { version = "0.18.0", features = ["enhanced-determinism"] }
nalgebra = { version = "0.32.3", features = ["convert-glam024"] }
sefirot = { path = "../sefirot/sefirot", features = ["bevy"] }
sefirot_grid = { path = "../sefirot/sefirot_grid" }
bevy_sefirot = { path = "../sefirot/bevy_sefirot", features = ["display"] }
id_newtype = { path = "../sefirot/id_newtype" }
morton = "0.3.0"
winit = "0.29.15"
bevy_egui = "0.26.0"
egui = "0.26.2"


[dependencies.luisa_compute]
git = "https://github.com/iMplode-nZ/luisa-compute-rs"
branch = "main"
features = ["nalgebra", "glam"]

[dependencies.bevy]
version = "0.13.1"
default-features = false
features = ["x11", "bevy_winit", "bevy_render", "multi-threaded"]

[features]
default = ["dylib"]
dylib = ["bevy/dynamic_linking"]
debug = ["sefirot/debug", "bevy_sefirot/debug"]
trace = ["bevy/trace_chrome", "bevy_sefirot/trace"]

[profile.dev.package.'*']
opt-level = 3

# Apparently trace_chrome still has issues?
[patch.crates-io.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "release-0.13.1"
